--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&display=swap");
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: "Open Sans";
-  background-size: 100vw 100vh;
-  position: contain;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hidden {
@@ -13,17 +19,16 @@ body {
 }
 
 #clock {
-  text-align: center;
   font-size: 100px;
   margin-top: 200px;
   margin-bottom: 50px;
   font-weight: 600;
   border-radius: 20px;
   padding: 15px;
+  transition: text 0.3s ease-in-out;
 }
 
 #login {
-  text-align: center;
   margin: 20px;
 }
 
@@ -46,13 +51,14 @@ body {
 #login input:last-child {
   width: 80px;
   font-size: 20px;
+  font-weight: 600;
   border: 2px solid black;
   padding: 5px 10px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 #greeting {
-  text-align: center;
   margin: 20px;
   font-weight: 600;
   font-size: 32px;
@@ -75,8 +81,8 @@ body {
 }
 
 .td {
-  text-align: center;
   margin: 20px;
+  text-align: center;
 }
 
 #todo-list span,
